--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
+    "milligram": "^1.4.1",
+    "normalize": "^0.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
