--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "font-awesome": "^4.7.0",
     "milligram": "^1.4.1",
     "normalize": "^0.3.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
