--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vespi",
+  "name": "vespy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
+    "joi-browser": "^13.4.0",
     "milligram": "^1.4.1",
     "normalize": "^0.3.1",
     "prop-types": "^15.7.2",
